# docker-coq-action-multi-opam-demo

./: .gitignore  LICENSE  README.md  coq-demo.opam  coq-libdemo.opam
.github/workflows/: build.yml
src/demo/: _CoqProject  demo.v
src/libdemo/: _CoqProject  libdemo.v
